Always include Capacitor origins in CORS allowed list
The APP_CORS_ALLOWED_ORIGINS env var (set in Coolify) was overriding
the @Value default, so Capacitor APK origins never reached the CORS
filter. Merging Capacitor origins (https://localhost, capacitor://localhost,
http://localhost) into the configured list at runtime, regardless of
env value, so the Android APK can authenticate without manual env edits.

Co-Authored-By: Claude Opus 4.7 (1M context) <noreply@anthropic.com>